P5 E-learning/force-app/main/default/objects/UserTrail__c/UserTrail__c.object-meta.xml
<CustomObject>
    <label>UserTrail</label>
    <nameField>
        <displayFormat>UT-{0000}</displayFormat>
        <label>UserTrail Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>UsersTrails</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>