P5 E-learning/force-app/main/default/objects/UserTrail__c/fields/Trail__c.field-meta.xml
<CustomField>
    <fullName>Trail__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Trail</label>
    <referenceTo>Trail__c</referenceTo>
    <relationshipLabel>UsersTrails</relationshipLabel>
    <relationshipName>UsersTrails</relationshipName>
    <type>Lookup</type>
</CustomField>