P5 E-learning/force-app/main/default/objects/UserTrail__c/fields/UserTrail__c.field-meta.xml
<CustomField>
    <fullName>UserTrail__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>UserTrail</label>
    <referenceTo>User</referenceTo>
    <relationshipName>UsersTrails</relationshipName>
    <type>Lookup</type>
</CustomField>